compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__const_using_opaque_constructor_from_other_package.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub const two = one.Two(2)"
---
----- SOURCE CODE
-- one.gleam
pub opaque type Two { Two(Int) }

-- main.gleam
import one

pub const two = one.Two(2)

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:3:17
  │
3 │ pub const two = one.Two(2)
  │                 ^^^^^^^

one.Two is a type constructor, it cannot be used as a value
