compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__const_using_private_constant.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub const two = one.two"
---
----- SOURCE CODE
-- one.gleam
const two = 2

-- main.gleam
import one

pub const two = one.two

----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:3:17
  │
3 │ pub const two = one.two
  │                 ^^^^^^^

`one` does define `two`, but it is private and cannot be accessed by other
modules.
