compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__const_using_private_constructor.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one\n\npub const two = one.Two"
---
----- SOURCE CODE
-- one.gleam
type Two { Two }

-- main.gleam
import one

pub const two = one.Two

----- ERROR
error: Use of private value
  ┌─ /src/one/two.gleam:3:17
  │
3 │ pub const two = one.Two
  │                 ^^^^^^^

`one` does define `Two`, but it is private and cannot be accessed by other
modules.
